Ran Cleanup. Time taken in seconds: 6622